# SimplePath

./: .clang-format  CMakeLists.txt  LICENSE  README.md  TODO.md  UnitTests.cpp  UnitTests.h  example_scene.sp  main.cpp
Cameras/: Camera.h
Image/: Image.cpp  Image.h
Integrators/: Integrator.cpp  Integrator.h
Lights/: Light.h  LightSample.h
base/: AccumulatedLogger.h  Array2D.h  Constants.h  Endian.h  FileParser.cpp  FileParser.h  Logger.cpp  Logger.h  MemoryArena.h  PlyReader.cpp  PlyReader.h  ProgressBar.h  RunningStats.h  STLReader.cpp  STLReader.h  Scene.h  SmartToRawPointerIterator.h  Stopwatch.h  Tile.h  TileScheduler.h  Util.h  not_null.h
materials/: BSDFProperties.h  Material.cpp  Material.h
math/: AffineSpace.h  Angles.h  BBox.h  BBox3.h  Distribution1D.h  Distribution2D.h  HSV.h  LinearSpace3x3.h  Math.h  Morton.h  ONB.h  Point2i.h  Quaternion.h  RGB.h  RSequence.h  Ray.h  Sampler.h  Sampling.cpp  Sampling.h  Transformation.h  Vector2.h  Vector3.h  VectorType.h
scenes/: bunny.sp  elf.sp  lucy.sp  material_spheres.sp
shapes/: Aggregate.h  BVHAccelerator.h  Hitable.h  Intersection.h  ListAccelerator.h  Plane.h  Primitive.h  Shape.h  ShapeSample.h  Sphere.h  Triangle.cpp  Triangle.h
